# bible-mvp

./: .gitignore  Dockerfile  LICENSES.md  README.md  TODO.md  fly.toml  pyproject.toml  spec.md
.claude/: settings.local.json
backend/: __init__.py  database.py  main.py  models.py
data/: reading-plan-chronological.json
docs/plans/: 2026-01-16-reference-autocomplete-and-verse-highlighting-design.md
frontend/: index.html
frontend/static/: manifest.json  sw.js
frontend/static/css/: style.css
frontend/static/js/: app.js  offline-storage.js  supabase-client.js
scripts/: __init__.py  add_commentary_links.py  build_english_alignments.py  import_bsb.py  import_commentary.py  import_cross_refs.py  import_full_bibles.py  import_interlinear.py  import_sample.py  import_speakers.py  import_spurgeon.py  import_stepbible_alignment.py  import_strongs.py  import_web.py  import_web_xml.py
supabase/migrations/: 001_user_notes.sql  002_user_tags.sql  003_reading_plans.sql  004_bug_reports.sql
